--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,7 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = _build
+BUILDDIR      = build
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
@@ -132,3 +132,17 @@ doctest:
 	$(SPHINXBUILD) -b doctest $(ALLSPHINXOPTS) $(BUILDDIR)/doctest
 	@echo "Testing of doctests in the sources finished, look at the " \
 	      "results in $(BUILDDIR)/doctest/output.txt."
+
+
+GH_PAGES_SOURCES = _templates
+
+gh-pages:
+    git checkout gh-pages
+    rm -rf build _sources _static
+    git checkout master $(GH_PAGES_SOURCES)
+    git reset HEAD
+    make html
+    mv -fv build/html/* ./
+    rm -rf $(GH_PAGES_SOURCES) build
+    git add -A
+    git ci -m "Generated gh-pages for `git log master -1 --pretty=short --abbrev-commit`" && git push origin gh-pages ; git checkout master
