upgrade to python3

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,9 @@ auto_use = True
 package_name = tardisnuclear
 description = Nuclear decay processes for bolometric light curves as well as other processes
 long_description = NA
-author = John Doe
-author_email = johndoe@nowhere.com
+author = Wolfgang Kerzendorf
+author_email = wkerzendorf@gmail.com
 license = BSD
 url = http://astropy.org/
 edit_on_github = False
-github_project = astropy/astropy
+github_project = wkerzendorf/tardisnuclear
